experimental/parser/testdata/parser/import/42.proto.stderr.txt
error: unexpected integer literal in import
  --> testdata/parser/import/42.proto:5:8
   |
 5 | import 42;
   |        ^^ expected string literal

encountered 1 error
